--- a/Immigrant_Invest/index.html
+++ b/Immigrant_Invest/index.html
@@ -6,7 +6,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="style/normalize.css">
-   <link rel="stylesheet" href="/assets/fonts/stylesheet.css">
+   <link rel="stylesheet" href="assets/fonts/stylesheet.css">
    <link rel="stylesheet" href="style/style.css">
    <link rel="stylesheet" href="style/media.css">
    <title>Reviews</title>
@@ -15,7 +15,7 @@
 <body>
    <header>
       <div class="imaginary_bg_header">
-         <img src="/assets/svg/menu.svg" alt="imaginary_bg_header">
+         <img src="assets/svg/menu.svg" alt="imaginary_bg_header">
       </div>
       <div id="fixed" class="fixed_div"></div>
       <div class="bg_header"></div>
