--- a/Immigrant_Invest/index.html
+++ b/Immigrant_Invest/index.html
@@ -52,8 +52,8 @@
                               </div>
                            </div>
                            <div class="tile_img">
-                              <img class="face_img" src="/assets/png/Ellipse_319.png" alt="">
-                              <img class="country_img" src="/assets/png/malta-flag.png" alt="">
+                              <img class="face_img" src="assets/png/Ellipse_319.png" alt="">
+                              <img class="country_img" src="assets/png/malta-flag.png" alt="">
                            </div>
 
                         </div>
@@ -78,7 +78,7 @@
                   <div class="reviews_tiles_bold_vertical vertical_tile tile">
                      <div class="tile_bold_content">
                         <div class="tile_arrow">
-                           <img src="/assets/svg/arrow.svg" alt="">
+                           <img src="assets/svg/arrow.svg" alt="">
                         </div>
                         <div class="tile_bold_text">
                            <p>Я встретился с Ольгой Строевой в моем родном Петербурге и был приятно удивлен заботой о
@@ -93,7 +93,7 @@
                               <span>Получил гражданство Мальты</span>
                            </div>
                         </div>
-                        <img class="bold_img" src="/assets/png/Николай-Никонов 1.png" alt="">
+                        <img class="bold_img" src="assets/png/Николай-Никонов 1.png" alt="">
                      </div>
                   </div>
                </a>
@@ -111,8 +111,8 @@
                               </div>
                            </div>
                            <div class="tile_img">
-                              <img class="face_img" src="/assets/png/Ellipse_319.png" alt="">
-                              <img class="country_img" src="/assets/png/malta-flag.png" alt="">
+                              <img class="face_img" src="assets/png/Ellipse_319.png" alt="">
+                              <img class="country_img" src="assets/png/malta-flag.png" alt="">
                            </div>
 
                         </div>
@@ -151,8 +151,8 @@
                               </div>
                            </div>
                            <div class="tile_img">
-                              <img class="face_img" src="/assets/png/Ellipse_319_1.png" alt="">
-                              <img class="country_img" src="/assets/png/moldova.png" alt="">
+                              <img class="face_img" src="assets/png/Ellipse_319_1.png" alt="">
+                              <img class="country_img" src="assets/png/moldova.png" alt="">
                            </div>
 
                         </div>
@@ -188,8 +188,8 @@
                               </div>
                            </div>
                            <div class="tile_img">
-                              <img class="face_img" src="/assets/png/Ellipse_319.png" alt="">
-                              <img class="country_img" src="/assets/png/malta-flag.png" alt="">
+                              <img class="face_img" src="assets/png/Ellipse_319.png" alt="">
+                              <img class="country_img" src="assets/png/malta-flag.png" alt="">
                            </div>
 
                         </div>
@@ -228,8 +228,8 @@
                               </div>
                            </div>
                            <div class="tile_img">
-                              <img class="face_img" src="/assets/png/Ellipse_319_2.png" alt="">
-                              <img class="country_img" src="/assets/png/monaco.png" alt="">
+                              <img class="face_img" src="assets/png/Ellipse_319_2.png" alt="">
+                              <img class="country_img" src="assets/png/monaco.png" alt="">
                            </div>
 
                         </div>
@@ -263,8 +263,8 @@
                               </div>
                            </div>
                            <div class="tile_img">
-                              <img class="face_img" src="/assets/png/Ellipse_319_3.png" alt="">
-                              <img class="country_img" src="/assets/png/montenegro-flag.png" alt="">
+                              <img class="face_img" src="assets/png/Ellipse_319_3.png" alt="">
+                              <img class="country_img" src="assets/png/montenegro-flag.png" alt="">
                            </div>
 
                         </div>
@@ -292,7 +292,7 @@
                   <div class="reviews_tiles_bold_vertical vertical_tile tile">
                      <div class="tile_bold_content">
                         <div class="tile_arrow">
-                           <img src="/assets/svg/arrow.svg" alt="">
+                           <img src="assets/svg/arrow.svg" alt="">
                         </div>
                         <div class="tile_bold_text">
                            <p>Я встретился с Ольгой Строевой в моем родном Петербурге и был приятно удивлен заботой о
@@ -308,7 +308,7 @@
                               <span>Получил гражданство Мальты</span>
                            </div>
                         </div>
-                        <img class="bold_img" src="/assets/png/Николай-Никонов.png" alt="">
+                        <img class="bold_img" src="assets/png/Николай-Никонов.png" alt="">
                      </div>
                   </div>
                </a>
@@ -328,8 +328,8 @@
                               </div>
                            </div>
                            <div class="tile_img">
-                              <img class="face_img" src="/assets/png/Ellipse_319.png" alt="">
-                              <img class="country_img" src="/assets/png/malta-flag.png" alt="">
+                              <img class="face_img" src="assets/png/Ellipse_319.png" alt="">
+                              <img class="country_img" src="assets/png/malta-flag.png" alt="">
                            </div>
 
                         </div>
@@ -365,8 +365,8 @@
                               </div>
                            </div>
                            <div class="tile_img">
-                              <img class="face_img" src="/assets/png/Ellipse_319.png" alt="">
-                              <img class="country_img" src="/assets/png/malta-flag.png" alt="">
+                              <img class="face_img" src="assets/png/Ellipse_319.png" alt="">
+                              <img class="country_img" src="assets/png/malta-flag.png" alt="">
                            </div>
 
                         </div>
@@ -403,7 +403,7 @@
 
    <footer>
       <div class="imaginary_bg_footer">
-         <img src="/assets/svg/footer-new.svg" alt="imaginary_bg_footer">
+         <img src="assets/svg/footer-new.svg" alt="imaginary_bg_footer">
       </div>
    </footer>
 
@@ -411,7 +411,7 @@
       <a href="#fixed" class="popup_area"></a>
       <div class="popup_body">
          <div class="popup_content">
-            <a href="#fixed" class="popup_close"><img class="popup_close_img" src="/assets/png/cross_114275.png"
+            <a href="#fixed" class="popup_close"><img class="popup_close_img" src="assets/png/cross_114275.png"
                   alt=""></a>
             <div class="popup_first_lvl tile_first_lvl">
                <div class="popup_title_and_subtitle">
@@ -419,8 +419,8 @@
                   <div class="popup_subtitle tile_subtitle">Получил гражданство Мальты</div>
                </div>
                <div class="popup_img tile_img">
-                  <img class="face_img" src="/assets/png/Ellipse_319.png" alt="">
-                  <img class="country_img" src="/assets/png/malta-flag.png" alt="">
+                  <img class="face_img" src="assets/png/Ellipse_319.png" alt="">
+                  <img class="country_img" src="assets/png/malta-flag.png" alt="">
                </div>
             </div>
             <div class="popup_second_lvl tile_second_lvl">
